--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
-html{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
-
+    
+}
+html{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 a{   
     display: inline;
@@ -25,7 +25,6 @@ h2{
     width: 100%;
     background-color: rgb(39, 110, 160);
     height: 75px;
-    position: -webkit-sticky;
     position: sticky;
     top: 0px;
     z-index: 1;
@@ -230,7 +229,7 @@ h2{
     display: block;
     text-transform: uppercase;
     font-size: 11px;
-    color:#9e9e9e
+    color:#9e9e9e;
 }
 .product-info .product-name{
     font-weight: 600;
@@ -279,6 +278,7 @@ h2{
     width: 100%;
     height: 300px;
     display: inline-table;
+    /* justify-content: space-between; */
 }
 #aboutus{
     padding-top: 30px;
@@ -339,7 +339,7 @@ h2{
     font-size: 30px;
     width: 50px;
     height: 50px;
-    background-color:rgb(239, 175, 66) ;
+    background-color: rgb(239, 175, 66) ;
     color: aliceblue;
     position: fixed;
     display: flex;
@@ -347,7 +347,7 @@ h2{
     right: 20px;
     cursor: pointer;
     align-items: center;
-    justify-content:center ;
+    justify-content: center;
     border-radius: 50%;
 }
 #backtotop a:hover{
