--- a/css/login.css
+++ b/css/login.css
@@ -1,11 +1,16 @@
-html{
-    /* font-size: 70%; */
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+#container {
+    position: fixed;
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.7);
 }
-*{
-    box-sizing: border-box;
-}
-#container{
+
+#login,
+#signup {
+    font-family: 'Open Sans', sans-serif;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -16,17 +21,24 @@ html{
     border-radius: 5px;
     height: auto;
     text-align: center;
+    display: none;
 }
-#header{
+
+#header-login,
+#header-signup {
     background-color: rgb(39, 110, 160);
     height: 40px;
     line-height: 40px;
     color:white
 }
-#main{
+
+#main-login,
+#main-signup {
     background-color: antiquewhite;
 }
-.txt{
+
+#main-login .txt,
+#main-signup .txt {
     padding-top: 10px;
     padding-bottom: 5px;
     text-align: left;
@@ -34,9 +46,10 @@ html{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     width: 100%;
     padding-left: 10px;
-
 }
-.inp{
+
+#main-login .inp,
+#main-signup .inp {
     margin: auto;
     border: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -47,12 +60,24 @@ html{
     height: 40px;
     margin-bottom: 10px;
 }
-#foot{
+
+h3 {
+    color: black;
+}
+
+h3:hover {
+    color: white;
+}
+
+#footer-login,
+#footer-signup {
     width:100%;
     padding-top: 15px;
     padding-bottom: 15px;
 }
-#submit{
+
+#button-login,
+#button-signup {
     color:white;
     cursor: pointer;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -63,6 +88,8 @@ html{
     width: 70px; 
     height: 40px;
 }
-#foot input:hover{
+
+#footer-login input:hover,
+#footer-signup input:hover {
     background-color: rgb(56, 136, 194);
 }
