--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 }
 html {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 a {
     display: inline;
@@ -157,7 +156,7 @@ h2 {
 }
 #username {
     display: block;
-    font-family:'Poppins';
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 12px;
 }
 #banner {
@@ -194,7 +193,7 @@ h2 {
     color: rgb(111, 111, 110);
 }
 #content {
-    font-family: 'Open Sans', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 14px;
     line-height: 1.15;
     color: black;
@@ -283,6 +282,56 @@ h2 {
 .products li :hover > .product-thumb img {
     filter: opacity(80%); /* Làm mờ hình khi hover vào li */
 }
+/*PAGENATION*/
+.content-paging{
+    width: 20%;
+    margin: auto;
+    margin-bottom: 40px;
+}
+.page{
+    display: flex;
+    list-style: none;
+    width: 100%;
+    height: 40px;
+}
+.button-prev-next-active{
+    width: 26%;
+    height: 40px;
+    line-height: 45px;
+    color: rgba(0, 0, 0, 0.557);
+}
+.button-prev-next-active i{
+    font-size: 20px;
+}
+.button-prev-next{
+    width: 26%;
+    height: 40px;
+    line-height: 45px;
+}
+.button-prev-next i{
+    font-size: 20px;
+    cursor: pointer;
+}
+.number-page{
+    background-color: rgba(255, 255, 255, 0.451);
+    width: 100%;
+    display: flex;
+    border-radius: 5px;
+}
+.number-page li{
+    border-radius: 5px;
+    height: 40px;
+    line-height: 40px;
+    width: 33%;
+    font-size: 16px;
+}
+.number-page .active{
+    background-color:rgba(0, 0, 0, 0.557) ;
+}
+.number-page li:hover{
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.296);
+}
 #footer {
     position: relative;
     display: flex;
@@ -313,7 +362,7 @@ h2 {
     color: black;
 }
 #contact {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;    
     font-style: italic;
     padding-top: 100px;
     padding-right: 100px;
