update detail products

--- a/css/style.css
+++ b/css/style.css
@@ -443,6 +443,7 @@ h2 {
     padding-bottom: 20px;
 }
 #detail-pro{  
+    padding-left: 10px;
     margin-top: 10%;
     margin-bottom: 50px;
     width: 40%;
@@ -460,6 +461,9 @@ h2 {
 #detail-pro li input{
     text-align: center;
     width: 25px;
+}
+#detail-pro h3{
+    color: red;
 }
 #detail #addtocart div {
     font-weight: 500;
