add a new product (admin)

--- a/css/admin.css
+++ b/css/admin.css
@@ -13,7 +13,7 @@ input::-webkit-inner-spin-button {
 	-webkit-appearance: none;
     margin: 0;
 }
-#leftmenu{
+#leftmenu {
 	width: 85px;
 	overflow: hidden;
 	height: 100vh;
@@ -21,7 +21,7 @@ input::-webkit-inner-spin-button {
 	position: fixed;
 	transition: 0.5s;
 }
-#leftmenu .logo{
+#leftmenu .logo {
 	display: block;
 	width: 80px;
 	height: 70px;
@@ -31,27 +31,27 @@ input::-webkit-inner-spin-button {
 	margin-bottom: 30px;
 	transition: 0.5s;
 }
-#leftmenu .logo img{
+#leftmenu .logo img {
 	height: 100%;
 }
-#user #username{
+#user #username {
     width: 100%;
     text-align: center;
     font-weight: 700;
 }
-#leftmenu ul li{
+#leftmenu ul li {
 	width: 100%;
 	display: flex;
 	list-style-type: none;
 	border-bottom: 1px solid rgba(255,255,255,0.4);
 }
-#leftmenu ul li:last-child{
+#leftmenu ul li:last-child {
 	border: none;
 }
-#leftmenu ul li:hover{
+#leftmenu ul li:hover {
 	background: #232B33;
 }
-#leftmenu ul li i{
+#leftmenu ul li i {
     width: 50px;
     height: 70px;
     line-height: 70px;
@@ -59,7 +59,7 @@ input::-webkit-inner-spin-button {
 	font-size: 30px;
 	padding-left: 25px;
 }
-#leftmenu ul li a{
+#leftmenu ul li a {
 	text-decoration: none;
 	color: #fff;
 	font-size: 14pt;
@@ -69,21 +69,21 @@ input::-webkit-inner-spin-button {
 	padding-left: 50px;
 	opacity: 0;
 }
-#leftmenu:hover{
+#leftmenu:hover {
 	width: 250px;
 }
-#leftmenu:hover.content{
+#leftmenu:hover.content {
 	margin-left: 250px;
 	background-color: black;
 }
-#leftmenu:hover .logo{
+#leftmenu:hover .logo {
 	width: 250px;
 }
-#leftmenu:hover ul li a{
+#leftmenu:hover ul li a {
 	opacity: 1;
 	transition-delay: 0.25s;
 }	
-#user{
+#user {
 	position: absolute;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -92,13 +92,13 @@ input::-webkit-inner-spin-button {
 	right: 15px;
 	background-color: #3c434965;
 }
-.content{
+.content {
 
 	padding-top: 50px;
 	text-align: center;
 	margin-left: 85px;
 }
-.tital{
+.tital {
 	background-color: rgb(218, 216, 216);
 	margin-bottom: 20px;
 }
@@ -108,46 +108,46 @@ input::-webkit-inner-spin-button {
 	border: black solid 0.5px;
 	border-bottom: none;
 }
-.titalList th{
+.titleList th {
 	border-left: black solid 0.5px;
 	border-bottom: black solid 0.5px;
 }
-.titalList th:first-child{
+.titleList th:first-child {
 	border-left: none;
 }
-.titalList {
+.titleList {
 	background-color: rgb(242, 120, 38);
 	text-align: center;
 }
-.titalList i {
+.titleList i {
 	font-size: larger;
 	cursor: pointer;
 }
-.detailList td{
+.detailList td {
 	border-left: black solid 0.5px;
 	border-bottom: black solid 0.5px;
 }
-.detailList td:first-child{
+.detailList td:first-child {
 	border-left: none;
 }
 
-.id,.name,.type,.cost,.edit,.status,.email{
+.id,.name,.type,.cost,.edit,.status,.email {
 	padding-left: 15px;
 	padding-right: 15px;
 }
-.image{
+.image {
 	width: 400px;
 	padding: 10px 10px;
 }
-.image img{
+.image img {
 	width: 30%;
 }
-.delete{
+.delete {
 	width: 50px;
 	background-color: rgb(242, 120, 38);
 	border-radius: 10px;
 }
-.delete:hover{
+.delete:hover {
 	background-color: rgba(242, 120, 38, 0.471);
 	padding-bottom: 5px;
 	padding-top: 5px;
@@ -162,7 +162,7 @@ input::-webkit-inner-spin-button {
     display: none;
     background-color: rgba(0, 0, 0, 0.7);
 }
-.addproduct{
+.addProduct {
 	color: #fff;
 	font-family: 'Open Sans', sans-serif;
     position: fixed;
@@ -184,23 +184,23 @@ input::-webkit-inner-spin-button {
     cursor: pointer;
     font-size: 30px;
 }
-.row{
+.row {
 	margin-left: 30px;
 	margin-top: 30px;
 	margin-bottom: 30px;
 	display: flex;
     flex-wrap: wrap;
 }
-.input{
+.input {
 	width: 60%;
 	float: left;
 	margin-bottom: 30px;
 }
-.input .txt{
+.input .txt {
 	margin-left: 30px;
 	margin-top: 10px;
 }
-.input div{
+.input div {
 	width: 50%;
 	margin-top: 10px;
 	margin-left: 30px;
@@ -209,7 +209,7 @@ input::-webkit-inner-spin-button {
 	text-align: center;
 	line-height: 40px;
 }
-.input div .inp{
+.input div .inp {
 	color: #fff;
 	width: 100%;
 	border: 0px;
@@ -220,34 +220,34 @@ input::-webkit-inner-spin-button {
 .input div .inp:focus {
     outline: none;
 }
-.img{
+.img {
 	margin-top: 10%;
 	width: 40%;
 	float: right;
 	padding-right: 10px;
 }
-.img #file-inp{
+.img #file-inp {
 	display: none;
 }
-.img label i{
+.img label i {
 	margin-bottom: 20%;
 	margin-top: 20%;
 	display: block;
 	font-size: 60px;
 	cursor: pointer;
 }
-.img label i:hover{
+.img label i:hover {
 	color:#f5a623 ;
 }
-.img img{
+.img img {
 	width: 80%;
 }
-.btaddPro{
+.btAddPro {
 	height: 40px;
 	width: 100%;
 	clear: both;
 }
-.btaddPro input{
+.btAddPro input {
 	border: 0px;
 	color: #fff;
 	text-transform: uppercase;
@@ -258,7 +258,7 @@ input::-webkit-inner-spin-button {
 	cursor: pointer;
 	background-color: #f5a623;
 }
-.btaddPro input:hover{
+.btAddPro input:hover {
 	border: solid 3px #f5a623;
 	background-color: #4e657a;
 	color: #f5a623;
