--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ h2 {
 .products {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     list-style: none;
 }
 .products li {
