--- a/css/style.css
+++ b/css/style.css
@@ -457,8 +457,11 @@ h2 {
     font-size: 30px;
 }
 #detail img {
-    padding-top: 20px;
-    width: 60%;
+    padding-top: 50px;
+    padding-left: 50px;
+    width: 400px;
+    height: 500px;
+    max-width: 100%;
     float: left;
     padding-bottom: 20px;
 }
@@ -471,6 +474,9 @@ h2 {
 }
 #detail h2 {
     color: black;
+}
+#detail ul li:first-child{
+    padding-right: 10px;
 }
 #detail-pro ul {
     list-style: none;
