--- a/css/admin.css
+++ b/css/admin.css
@@ -8,11 +8,6 @@
 html {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-	-webkit-appearance: none;
-    margin: 0;
-}
 #leftmenu {
 	width: 85px;
 	overflow: hidden;
@@ -107,6 +102,7 @@ input::-webkit-inner-spin-button {
 	border-spacing: 0px;
 	border: black solid 0.5px;
 	border-bottom: none;
+	border-right: none;
 }
 .titleList th {
 	border-left: black solid 0.5px;
@@ -114,6 +110,9 @@ input::-webkit-inner-spin-button {
 }
 .titleList th:first-child {
 	border-left: none;
+}
+.titleList th:last-child {
+	border-right: black solid 0.5px;
 }
 .titleList {
 	background-color: rgb(242, 120, 38);
@@ -129,6 +128,9 @@ input::-webkit-inner-spin-button {
 }
 .detailList td:first-child {
 	border-left: none;
+}
+.detailList td:last-child {
+	border-right: black solid 0.5px;
 }
 
 .id,.name,.type,.cost,.edit,.status,.email {
@@ -227,7 +229,9 @@ input::-webkit-inner-spin-button {
 	float: right;
 	padding-right: 10px;
 }
-.img #Editfile-inp {
+.img #Editfile-inp,
+.img #file-inp
+{
 	display: none;
 }
 .img label #upload, 
@@ -258,7 +262,7 @@ input::-webkit-inner-spin-button {
 	width: 100%;
 	clear: both;
 }
-.btAddPro, .btEditPro input {
+.btAddPro input, .btEditPro input, .deleteItem input{
 	border: 0px;
 	color: #fff;
 	text-transform: uppercase;
@@ -269,7 +273,7 @@ input::-webkit-inner-spin-button {
 	cursor: pointer;
 	background-color: #f5a623;
 }
-.btAddPro, .btEditPro input:hover {
+.btAddPro input:hover, .btEditPro input:hover, .deleteItem input:hover {
 	border: solid 3px #f5a623;
 	background-color: #4e657a;
 	color: #f5a623;
