--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,11 @@ a {
 h2 {
     color: white;
 }
-
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+    margin: 0;
+}
 /* HEADER */
 #header {
     display: flex;
@@ -205,15 +209,16 @@ h2 {
     font-size: 14px;
     line-height: 1.15;
     color: black;
-    background-color: antiquewhite;
+    background-color: rgb(234, 234, 230);
     text-align: center;
     margin-left: 100px;
     margin-right: 100px;
+    margin-bottom: 40px;
 }
 .headline {
     margin: 40px 0px;
 }
-#content h3 {
+#content #headline h3 {
     font-size: 18px;
     color: #bebebe;
     padding: 10px 20px;
@@ -240,7 +245,7 @@ h2 {
 }
 .products li img {
     max-width: 100%;
-    height: 500px;
+    height: 450px;
     width: 500px;
 }
 .product-info {
@@ -497,16 +502,87 @@ h2 {
     line-height: 50px;
     margin-top: 20px;
     padding-top: 0px;
+    border: solid 5px burlywood;
     background-color: burlywood;
     width: 50%;
     margin: auto;
     text-align: center;
 }
 #detail #addtocart div:hover {
-    box-shadow: 0 10px 30px;
-    background-color: rgb(214, 172, 118);
+    background-color: white;
 }
+/*shopping cart*/
+#listProductsBuy{
+    border: black solid 0.5px;
+    margin-bottom: 40px;
+}
+#listProductsBuy .productsBuy{
+    width: 100%;
+    display: flex;
+    list-style: none;
+    text-align: center;
+    border-bottom: black solid 0.5px;
+}
+#listProductsBuy ul:last-child{
 
+    border-bottom: none;
+}
+#listProductsBuy .productsBuy li{
+    margin: auto;
+    font-weight: 500;
+    font-size: 15px;
+    flex-basis: 16.667%;
+}
+#listProductsBuy .img-Pro{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 100%;
+}
+#listProductsBuy .img-Pro img {
+    width: 40%;
+}
+#listProductsBuy .productsBuy i{
+    font-size: 20px;
+    cursor: pointer;
+}
+#listProductsBuy .productsBuy i:hover{
+    color: rgb(242, 120, 38);
+    padding-bottom: 5px;
+}
+#buy{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 20%;
+    margin: auto;
+}
+#buy ul{
+    list-style: none;
+    display: flex;
+    text-align: center;
+    width: 100%;
+}
+#buy ul li{
+    margin: auto;
+}
+#buy ul li:first-child{
+    font-size: 18px;
+    font-weight: 400;
+}
+#buy ul li input{
+    width: 100%;
+    height: 40px;
+    font-size: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: rgb(242, 120, 38);
+    border: rgb(242, 120, 38) solid 2px;
+}
+#buy ul li input:hover{
+    margin-bottom: 5px;
+    background-color: rgb(241, 129, 55);
+    border: black solid 2px;
+    cursor: pointer;
+}
 /* MEDIA */
 @media only screen and (max-width: 1456px) {
     #aboutus {
