--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ input::-webkit-inner-spin-button {
     margin-bottom: 40px;
 }
 .headline {
-    margin: 40px 0px;
+    margin-top: 40px;
 }
 #content #headline h3 {
     font-size: 18px;
@@ -228,7 +228,93 @@ input::-webkit-inner-spin-button {
     color: #555;
     font-weight: 600;
 }
-
+#content .btFilter{
+    cursor: pointer;
+    display: block;
+    margin-left: 15px;
+    margin-bottom: 5px;
+    border: 1px solid #000;
+    width: 150px;
+    height: 40px;
+    line-height: 40px;
+}
+#content .filter i{
+    font-size: 18px ;
+}
+.filterAndSort{
+    top: 75px;
+    z-index: 1;
+    border: black solid 1px;
+    background-color: #fff;
+    overflow: hidden;
+    position: fixed;
+    height: 100%;
+    width: 0px;
+    transition: 0.1s;
+}
+.filterAndSort .tittleFilter,
+.filterAndSort .mainFilter .filter .options .filter1 .tittleFilter1{
+    border-bottom: #bebebe solid 0.5px;
+}
+.filterAndSort .tittleFilter h4{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    font-size: 20px;
+}
+.filterAndSort .tittleFilter h4 span{
+    line-height: 24px;
+    height: 24px;
+}
+.filterAndSort .tittleFilter h4 i{
+    line-height: 24px;
+    height: 24px;
+    font-size: 25px;
+    padding-right: 20px;
+    cursor: pointer;
+}
+.filterAndSort .mainFilter .sort .options .sort1,
+.filterAndSort .mainFilter .sort .options .sort2,
+.filterAndSort .mainFilter .filter .options .filter2{
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    border-bottom: #bebebe solid 0.5px;
+    text-transform: uppercase;
+    cursor: pointer;
+    
+}
+.filterAndSort .mainFilter .sort .options,
+.filterAndSort .mainFilter .filter .options{
+    display: none;
+}
+.filterAndSort .mainFilter .filter .options .filter1 .tittleFilter1{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+}
+.tittleFilter1 i{
+    line-height: 24px;
+    height: 24px;
+    padding-right: 20px;
+    cursor: pointer;
+}
+.filter1 .option1 div{
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    border-bottom: #bebebe solid 0.5px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.filter1 .option1{
+    display: none;
+}
 /* PRODUCTS */
 .products {
     display: flex;
@@ -246,7 +332,7 @@ input::-webkit-inner-spin-button {
 .products li img {
     max-width: 100%;
     height: 450px;
-    width: 500px;
+    width: 360px;
 }
 .product-info {
     padding: 10px 0px;
@@ -297,7 +383,7 @@ input::-webkit-inner-spin-button {
 }
 .products li :hover > .product-thumb img {
     filter: opacity(80%); /* Làm mờ hình khi hover vào li */
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 /* PAGINATION */
