--- a/css/admin.css
+++ b/css/admin.css
@@ -145,7 +145,6 @@ html {
 	border-right: black solid 0.5px;
 }
 #billList .detailList td{
-	color: white;
 	border-top: black solid 0.5px;
 	border-bottom: none;
 }
@@ -169,16 +168,17 @@ html {
 #billList .detailList td:last-child{
 	cursor: pointer;
 }
-.id,.name,.type,.quantity,.cost,.edit,.status,.email,.date,.totalPrice,.detailBill {
+.id,.name,.type,.quantity,.cost,.edit,.status,.email,.date,.totalPrice,.detailBill,.cat,.sale {
 	padding-left: 15px;
 	padding-right: 15px;
 }
 .image {
-	width: 400px;
+	width: 200px;
 	padding: 10px 10px;
 }
 .image img {
-	width: 30%;
+	width: 55px;
+	width: 70px;
 }
 .button {
 	width: 50px;
